# rune

./: .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  opencode.json  package.json
.github/workflows/: aur-dispatch.yml  ci.yml  release.yml
.opencode/memory/: MEMORY.md  feedback_always_use_commit_skill.md  feedback_always_use_shadcn_skill.md  feedback_catalog_first_for_new_deps.md  feedback_no_email_in_published_metadata.md  feedback_no_hand_written_versions.md  feedback_semantic_html_no_double_wrap.md  project_next_session_plan.md  project_persistence_layers.md  project_rune_overview.md  user_domain.md
apps/desktop/: README.md  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: app-header.tsx  editor-shell.tsx  editor-workspace.tsx  keybindings-popover.tsx  preview-sidebar.tsx  rune-logo.tsx  theme-provider.tsx  vault-sidebar.tsx
apps/desktop/src/components/ui/: breadcrumb.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  sheet.tsx  sidebar.tsx
apps/desktop/src/hooks/: use-keybindings.ts
apps/desktop/src/lib/: keybindings.ts  tauri-store-adapter.ts  vault-fs.ts  vault.ts
apps/mcp/: README.md  package.json  tsconfig.json
apps/mcp/src/: args.ts  db.ts  index.ts  library.ts  search.ts  server.ts
apps/mcp/test/: library.test.ts
(+13 files in other folders)
