[package]
name = "rune"
version = "0.1.2"
description = "AI-native, local-first markdown note-taking desktop app."
authors = ["eggfriedrice24"]
license = "MIT"
homepage = "https://github.com/eggfriedrice24/rune"
repository = "https://github.com/eggfriedrice24/rune"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-fs = { version = "2.5.1", features = ["watch"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
